--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -2,11 +2,12 @@
 
 	display: inline-block;
 	margin: 0 0 $gutter/2;
-	padding: .5em 1em;
+	padding: .8em 2em;
+	background: color('primary');
+	color: color('white');
 	line-height: 1em;
 	text-decoration: none;
 	text-align: center;
-	white-space: nowrap;
 	cursor: pointer;
 	user-select: none;
 	transition: background $duration $timing;
@@ -14,32 +15,13 @@
 	border-radius: 0;
 	vertical-align: middle;
 
-	&:active {
-		transition: none;
+	&:hover {
+		background: lighten(color('primary'), 5%);
 	}
 
-	@each $colorName, $color in $colors {
-
-		$colorFont: null;
-
-		@if lightness($color) <= 50% { $colorFont: white; }
-		@if lightness($color) > 50% { $colorFont: black; }
-
-		&--#{ $colorName } {
-
-			background: $color;
-			color: $colorFont;
-
-			&:hover {
-				background: lighten($color, 10%);
-			}
-
-			&:active {
-				background: darken($color, 10%);
-			}
-
-		}
-
+	&:active {
+		transition: none;
+		background: darken(color('primary'), 5%);
 	}
 
 }
