--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,6 @@
 // Colors ------------------------------------------------------ //
 $colors: (
+	'primary': #2d84fc,
 	'white': #ffffff,
 	'black': #000000,
 	'light': #dddddd,
