Link, figure, content, rte

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,10 @@
 @import 'background';
 @import 'color';
 @import 'button';
+@import 'link';
+@import 'list';
 @import 'align';
 @import 'anchor';
 @import 'section';
+@import 'rte';
+@import 'figure';
