--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 // Modules ----------------------------------------------------- //
 @import '../../node_modules/normalize.css/normalize';
 @import '../../node_modules/basicgrid/src/styles/main';
+@import '../../node_modules/formbase/src/styles/main';
 
 // Styles ------------------------------------------------------ //
 @import 'html';
