--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -8,6 +8,7 @@
 	line-height: 1em;
 	text-decoration: none;
 	text-align: center;
+	font-weight: 600;
 	cursor: pointer;
 	user-select: none;
 	transition: background $duration $timing;
