--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'functions';
 @import 'vars';
 @import 'mixins';
+@import 'placeholders';
 
 // Modules ----------------------------------------------------- //
 @import '../../node_modules/normalize.css/normalize';
@@ -29,3 +30,4 @@
 @import 'figure';
 @import 'image';
 @import 'cookie';
+@import 'accordion';
