--- a/src/components/cookie/cookie.njk
+++ b/src/components/cookie/cookie.njk
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="column">
 			<div class="cookie__text rte">{{ bodytext | safe }}</div>
-			<button class="cookie__button button">{{ button.label }}</button>
+			<button class="cookie__button button">{{ button }}</button>
 		</div>
 	</div>
 
