--- a/src/components/link/link.njk
+++ b/src/components/link/link.njk
@@ -1,1 +1,1 @@
-<a href="{{ href.value }}" {% if href.target %}target="{{ href.target }}"{% endif %} class="link">{{ label }}</a>
+<a href="{{ href.value }}" {% if href.target %}target="{{ href.target }}"{% endif %} class="link">{{ href.label }}</a>
