--- a/src/components/section_grid_12/section_grid_12.njk
+++ b/src/components/section_grid_12/section_grid_12.njk
@@ -2,10 +2,10 @@
 	{% if anchor %}
 		{% inject "anchor/anchor.njk", { anchor: anchor } %}
 	{% endif %}
-	{% if header %}
+	{% if headline %}
 		<div class="row">
 			<div class="column">
-				<h2 class="h2 spacing-large">{{ header }}</h2>
+				<h2 class="h2 spacing-large">{{ headline.text }}</h2>
 			</div>
 		</div>
 	{% endif %}
