--- a/src/components/background_styles/background_styles.njk
+++ b/src/components/background_styles/background_styles.njk
@@ -1,1 +1,1 @@
-style="background-image: url('{{ src }}'); {% if x and y %}background-position: calc({{ x }} * 100%) calc({{ y }} * 100%){% endif %}"
+style="background-image: url('{{ src }}'); {% if x and y %}background-position: calc({{ x }} * 100%) calc({{ y }} * 100%){% endif %}" {% if alternative %}aria-label="{{ alternative }}"{% endif %}
