--- a/src/components/button/button.njk
+++ b/src/components/button/button.njk
@@ -1,1 +1,1 @@
-<a href="{{ href.value }}" {% if href.target %}target="{{ href.target }}"{% endif %} class="button">{{ label }}</a>
+<a href="{{ href.value }}" {% if href.target %}target="{{ href.target }}"{% endif %} class="button">{{ href.label }}</a>
