--- a/src/components/content/content.njk
+++ b/src/components/content/content.njk
@@ -1,8 +1,4 @@
-{# Don't delete this div. The content component doesn't work in a flex container without a wrapper. #}
-<div>
-	{% if figure.image.src %}
-		{% inject "figure/figure.njk", figure %}
-	{% endif %}
+<div class="content">
 	<div class="rte">
 		{{ bodytext | safe }}
 	</div>
