--- a/src/components/image/image.njk
+++ b/src/components/image/image.njk
@@ -1,1 +1,6 @@
-<div class="image" {% inject "background_styles/background_styles.njk", image %}></div>
+<div class="image" {% inject "hr_background_styles/hr_background_styles.njk", image %}>
+	{% if image_height %}
+		{# There's already a style attribute on the image so we need another div to set a height #}
+		<div class="image__height" style="height: {{ image_height }}px"></div>
+	{% endif %}
+</div>
