--- a/src/components/breadcrumb/breadcrumb.njk
+++ b/src/components/breadcrumb/breadcrumb.njk
@@ -3,7 +3,7 @@
 		{% if loop.last %}
 			<span class="breadcrumb__item">{{ item.href.label }}</span>
 		{% else %}
-			<a href="{{ item.href.value }}" {% if item.href.target %}target="{{ item.href.target }}"{% endif %} class="breadcrumb__link">{{ item.href.label }}</a>
+			<a class="breadcrumb__link" href="{{ item.href.value }}" {% if item.href.target %}target="{{ item.href.target }}"{% endif %}>{{ item.href.label }}</a>
 			<span class="breadcrumb__separator">/</span>
 		{% endif %}
 	{% endfor %}
