--- a/src/styles/_placeholders.scss
+++ b/src/styles/_placeholders.scss
@@ -11,3 +11,21 @@
 	outline: none;
 
 }
+
+%fill {
+
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+
+}
+
+%background {
+
+	background-color: color('light');
+	background-size: cover;
+	background-position: center;
+
+}
