--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,7 +3,7 @@ $colors: (
 	'primary': #2d84fc,
 	'white': #ffffff,
 	'black': #000000,
-	'light': #dddddd,
+	'light': #eeeeee,
 	'dark': #333333
 );
 
